add producttypes routers
