# src/router/router.js
@@ -2,12 +2,16 @@ import express from "express";
 import authRouter from "./authrouter.js";
 import CheckAuthMiddleware from "../middlewares/checkAuthMidlleware.js";
 import { getUsers } from "../controlers/authcontroler.js";
+import productRouter from "./productsrouter.js";
+import producttypeRouter from "./producttyperouter.js";
 
 const router = express.Router();
-router.get('/allUsers',getUsers)
 router.use("/auth", authRouter);
 
-router.use(CheckAuthMiddleware);
-// router.use("/product");
+// router.use(CheckAuthMiddleware);
+router.get('/allUsers',getUsers)
+
+router.use("/product",productRouter);
+router.use("/productType",producttypeRouter);
 
 export default router;
